News App - with React Query
- Category.js fixes on Card click
- Working on ArticleContainer.js
- Translations react-intl
- Adding react-icons

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_APP_URI='https://newsapi.org/v2/top-headlines'
-REACT_APP_APP_TOKEN='b1a1b8707b574debb993ef4f378cf1be'
+REACT_APP_APP_URI='https://newsapi.org/v2'
+REACT_APP_APP_TOKEN='e77bde4aeeb04fd1b3ef7426c496db71'
