--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-intl": "^5.10.6",
     "react-loading": "^2.0.3",
     "react-query": "^2.26.4",
